<resources>
    <string name="app_name">Billbook</string>
    <string name="action_settings">Settings</string>
    <string name="action_analysis">Analysis</string>
    <string name="action_accounts">Accounts</string>
    <string name="expense">支出</string>
    <string name="income">收入</string>
    <string name="notes">备注：</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="money_default">0.00</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="commit">提交</string>
    <string name="today">今天</string>
    <string name="setting">设置</string>
    <string name="influx">流入</string>
    <string name="influx_">流入：</string>
    <string name="flow">流出</string>
    <string name="flow_">流出：</string>
    <string name="accountBalance">账户余额</string>
    <string name="TitleHint">点击写备注：</string>
    <string name="edit_account">编辑账户</string>
    <string name="delete_account">删除账户</string>
    <!--以下是格式化字符串-->
    <string name="month_day">%1$s-%2$s</string>
    <string name="number_percentage">%1$.1f%%</string>
    <string name="string_account_note">备注:%1$s</string>
    <string name="string_account_money">金额：%1$f</string>
    <string name="positive_number">+%1$s</string>
    <string name="negative_number">-%1$s</string>
    <!--以下是以中文拼音命名的变量-->
    <string name="canyin">餐饮</string>
    <string name="dianying">电影</string>
    <string name="huafei">话费</string>
    <string name="jiaotong">交通</string>
    <string name="yiliao">医疗</string>
    <string name="yifu">衣服鞋包</string>
    <string name="fangzu">房租</string>
    <string name="qita">其他</string>
    <string name="zhuanzhang">转账</string>
    <string name="hongbao">红包</string>
    <string name="taobao">淘宝</string>
    <string name="shuiguo">水果</string>
    <string name="shucai">买菜</string>
    <string name="shenghuoyongpin">生活用品</string>
    <string name="lingshi">零食</string>
    <string name="gongzi">工资</string>
    <string name="linghuaqian">零花钱</string>
    <string name="jianzhi">兼职</string>
    <string name="shenghuofei">生活费</string>
    <string name="touzi">投资收益</string>
    <string name="jiangjin">奖金</string>
    <string name="xuanzezhanghu">选择账户</string>
    <string name="tianjiazhanghu">添加账户</string>
    <string name="zhanghumingcheng">账户名称：</string>
    <string name="chuxuka">储蓄卡</string>
    <string name="xingyongka">信用卡</string>
    <string name="zhifubao">支付宝</string>
    <string name="xianjin">现金</string>
    <string name="weixingzhifu">微信支付</string>
    <string name="jingdongjinrong">京东金融</string>
    <string name="queren">确认</string>
    <string name="beizhu">备注：</string>
    <string name="jine">金额：</string>
    <string name="zhanghuyue">账户余额：</string>
    <string name="zhanghuleixing">账户类型：</string>
    <string name="zhanghubeizhu">账户备注：</string>
</resources>
