<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SelectExpenseTypeActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_canyin"
                    android:text="@string/canyin"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_dianying"
                    android:text="@string/dianying"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_huafei"
                    android:text="@string/huafei"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_jiaotong"
                    android:text="@string/jiaotong"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_yiliao"
                    android:text="@string/yiliao"
                    android:textSize="24sp"/>

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_yifu"
                    android:text="@string/yifu"
                    android:textSize="24sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_fangzu"
                    android:text="@string/fangzu"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_shuiguo"
                    android:text="@string/shuiguo"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_lingshi"
                    android:text="@string/lingshi"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_shucai"
                    android:text="@string/shucai"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_shenghuoyongpin"
                    android:text="@string/shenghuoyongpin"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_taobao"
                    android:text="@string/taobao"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_zhuanzhang"
                    android:text="@string/zhuanzhang"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_hongbao"
                    android:text="@string/hongbao"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_circle_shape"
                    android:drawableTop="@drawable/img_qita"
                    android:text="@string/qita"
                    android:textSize="24sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

        </LinearLayout>



    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>