<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/selector_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="?attr/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_week_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_week_selector"
            android:text="@string/day"
            android:textColor="@drawable/tv_text_selector"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_month_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_month_selector"
            android:text="@string/month"
            android:textColor="@drawable/tv_text_selector"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_year_chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_year_selector"
            android:text="@string/year"
            android:textColor="@drawable/tv_text_selector"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selector_layout">

        <lecho.lib.hellocharts.view.ColumnChartView
            android:id="@+id/columnchart"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:padding="10dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/columnchart"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:tabTextColor="@color/black">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tl_tab"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp">
        </androidx.viewpager.widget.ViewPager>
    </RelativeLayout>
</RelativeLayout>